# ChangeLog for app-mobilephone/pyhumod
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jan 2010; James Rowe <jnrowe@gmail.com> pyhumod-0.03.ebuild:
  Fixed bytecode generation due to missing PYTHON_MODNAME.

*pyhumod-0.03 (14 Jan 2010)

  14 Jan 2010; James Rowe <jnrowe@gmail.com> +pyhumod-0.03.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
