@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST pyhumod-0.03.tar.gz 11820 RMD160 8dcf91551e2cabf54432c80739f4ec5a5e09963b SHA1 ca6c1b4756efcde75e0e709772e6ab825a2341e1 SHA256 4ca314a8c3ac4e1c30fb62538d5b0b0f3ec2762d7ed1d750b55214c4fcb049c6
-EBUILD pyhumod-0.03.ebuild 636 RMD160 4a1d359622e708e70b0d46eb7a3e4cf908abfbc4 SHA1 cfd4d11be4e830359fbb8b94113366c3e8ae3bd6 SHA256 1733dfe0afee75f3b78c31bf1ae4da86bedbd72f5882fd9fbcaf1ba06818ab9e
-MISC ChangeLog 389 RMD160 2f2bdce64bded9c855c6680fcaa3851716f775db SHA1 70aa752fe1ca57226407fd8e0ab6db977a21b23c SHA256 bc39a171d9d6d434c56efd78bae63d274def693a75a9533f2dfcbd3c5d5434e7
+EBUILD pyhumod-0.03.ebuild 882 RMD160 d5fca141109d0f9840f084c6ecd9f6c0f79dcaaa SHA1 8940bc09e5f9aa3a169a5b15091fb2abd913db02 SHA256 c745cb2f578e097e17b0ce1529d9e56828b19e434ec78c542c1262188fab01d1
+MISC ChangeLog 518 RMD160 74a4b12df1b3f43ddc4eee30e583918dcad65fbe SHA1 821c2b1681db2fa027af188e31f9a5aae60b41c0 SHA256 bced72320b9e20f3a0ce10ec2f22c17013c26946d8597ceb1e1ca080460debdd
 MISC metadata.xml 472 RMD160 e6ef0d1ee7ca6bf7b081ddd0efee557d11ec23ea SHA1 784ecae9366152e440df5bdf17a500d26b7f0b0d SHA256 5e0c61ae52654893ffba2bfb9756890512ff272965f3a2a607e6fe39c0336ab2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAktPioQACgkQzJrj3cAXR0latwCfSVQ7R9tQmUcaM/WZwtOdTkni
-ycYAn3UU3VQtaC6Nfqrht4Q+n+PbVuFd
-=R56r
+iEYEARECAAYFAktPkQQACgkQzJrj3cAXR0mC0wCfQH2uJSDIO7a3UuzHA5w8YICz
+yo0An2IegTO3VeNbn5I7P0XsFKRNRm7J
+=kLoj
 -----END PGP SIGNATURE-----
